# text-editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  new_main.cpp  todo.txt
include/: Document.h  Editor.h  Renderer.h  bottom_view.h  bottom_view_controller.h  camera.h  controller.h  cursor.h  editor_screen.h  main_view.h  main_view_controller.h  screen.h  terminal_screen.h  terminal_view.h  terminal_view_controller.h  text_buffer.h  utils.h  view.h  view_controller.h
resources/: brainstorm_doc.txt
resources/txt/: save_file.txt
src/: Document.cpp  Editor copy.txt  Editor.cpp  Renderer.cpp  bottom_view.cpp  bottom_view_controller.cpp  camera.cpp  controller.cpp  cursor.cpp  editor_screen.cpp  main_view.cpp  main_view_controller.cpp  terminal_screen.cpp  terminal_view.cpp  terminal_view_controller.cpp  text_buffer.cpp  view.cpp  view_controller copy.cpp  view_controller.cpp
